--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -68,6 +68,15 @@
         android:src="@drawable/ic_person_gray"
         app:shapeAppearance="@style/styleRoundedConersImage"/>
 
+    <ImageView
+        android:id="@+id/noriGoldIv"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginRight="80dp"
+        android:layout_toStartOf="@id/nameTv"
+        android:layout_below="@id/profileIv"
+        android:src="@drawable/ic_norigold_gold"/>
+
 
     <TextView
         android:id="@+id/nameTv"
