--- a/app/src/main/res/layout/row_pdf_sub.xml
+++ b/app/src/main/res/layout/row_pdf_sub.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     app:cardUseCompatPadding="false"
+    android:layout_marginTop="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white">
 
@@ -12,10 +13,9 @@
         android:background="@drawable/shape_edittext01"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/subNumberTv"
@@ -32,10 +32,22 @@
                 android:layout_height="wrap_content"
                 style="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="@color/black"
+                android:layout_toRightOf="@id/subNumberTv"
                 android:layout_marginLeft="15dp"
                 android:text=" 책 제목"/>
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/unlockIv"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="3dp"
+                android:src="@drawable/ic_unlock_gray"/>
+
+
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
