--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,21 @@
         <item name="cornerSize">20%</item>
     </style>
 <!--    투명 배경 다이아로그-->
-    <style name="CustomDialog" parent="android:Theme.Dialog">
-        <item name="android:windowIsTranslucent">true</item>
+    <style name="CustomDialog" parent="android:Theme.Holo.Dialog.NoActionBar">
+        <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowTitleStyle">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
+
+<!--    parent="android:Theme.Holo.Dialog.NoActionBar"-->
+<!--    <style name="CustomDialog" parent="android:Theme.Dialog">-->
 
 <!--    프로필 이미지-->
     <style name="styleCircleImage">
