--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,18 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/fantasyback"
     tools:context=".Activities.LoginActivity">
 
     <RelativeLayout
-
         android:id="@+id/toolbarRl"
-
         android:layout_width="match_parent"
-
-        android:layout_height="250dp"
-
-        android:background="@drawable/shape_toolbar01">
+        android:layout_height="250dp">
 
 
         <ImageView
@@ -44,7 +39,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/noAccountTv"
         android:layout_marginStart="30dp"
         android:layout_marginTop="225dp"
         android:layout_marginEnd="30dp">
@@ -115,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/forgotTv"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/shape_btn01"
+                android:background="@drawable/shape_btn02"
                 android:padding="10dp"
                 android:text="새 계정"
                 android:textColor="@color/white" />
@@ -128,10 +122,22 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/noAccountTv"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/shape_btn02"
+                android:background="@drawable/shape_btn01"
                 android:text="로그인"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
+
+            <android.widget.Button
+                android:id="@+id/passBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/loginBtn"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/shape_btn02"
+                android:text="건너뛰기"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
         </RelativeLayout>
     </ScrollView>
 
