--- a/app/src/main/res/layout/activity_text_view.xml
+++ b/app/src/main/res/layout/activity_text_view.xml
@@ -8,20 +8,22 @@
     tools:context=".Activities.TextViewActivity">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/textNsv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:scrollbars="vertical">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/titleTv"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="15dp"
                 android:fontFamily="@font/fontstyle"
@@ -31,21 +33,23 @@
                 android:textStyle="bold"
                 android:textSize="25sp" />
 
+
             <TextView
                 android:id="@+id/textTv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/titleTv"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="15dp"
                 android:fontFamily="@font/fontstyle"
-                android:lineSpacingExtra="10dp"
+                android:lineSpacingExtra="13dp"
                 android:text=""
                 android:textColor="@color/black"
+                android:maxLines="1000"
+                android:scrollHorizontally="false"
                 android:textSize="20sp" />
+
             <View
                 android:id="@+id/view1"
                 android:layout_below="@id/textTv"
