--- a/app/src/main/res/layout/row_home_book.xml
+++ b/app/src/main/res/layout/row_home_book.xml
@@ -5,27 +5,31 @@
     android:layout_height="150dp"
     app:cardBackgroundColor="#F4F4F4"
     app:cardCornerRadius="5dp"
+    android:layout_marginLeft="3dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:id="@+id/clikable"
-        android:layout_width="70dp"
+        android:layout_width="85dp"
         android:layout_height="140dp">
 
         <!--        pdf-->
         <RelativeLayout
             android:id="@+id/pdfRl"
-            android:layout_width="60dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
-            android:layout_margin="3dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="5dp"
             android:background="@color/gray01">
 
             <ImageView
                 android:id="@+id/bookIv"
-                android:scaleType="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="center" />
 
         </RelativeLayout>
 
@@ -41,6 +45,7 @@
                 style="@style/TextAppearance.MaterialComponents.Caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
                 android:maxLines="1"
                 android:text="Book Title"
                 android:textColor="@color/black" />
@@ -51,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/titleTv"
+                android:layout_marginLeft="3dp"
                 android:textSize="9sp"
                 android:text="조회수"
                 android:textColor="@color/black" />
@@ -60,6 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/viewCountTv"
+                android:layout_marginLeft="3dp"
                 android:textSize="9sp"
                 android:text="count"
                 android:textColor="@color/black" />
@@ -72,6 +79,7 @@
                 android:layout_below="@id/titleTv"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="3dp"
+                android:layout_marginRight="3dp"
                 android:textSize="10sp"
                 android:text="category"
                 android:textColor="@color/black"/>
