--- a/app/src/main/res/layout/row_pdf_sub.xml
+++ b/app/src/main/res/layout/row_pdf_sub.xml
@@ -43,7 +43,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="3dp"
-                android:src="@drawable/ic_unlock_gray"/>
+                android:src="@drawable/ic_lock_gray"/>
 
 
 
